--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "pro.butovanton.swipetorefresh"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -56,4 +56,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.2.3"
     kapt "androidx.room:room-compiler:2.2.3"
     androidTestImplementation "androidx.arch.core:core-testing:2.0.0"
+
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
